fix font on firefox

--- a/src/components/menu/menu.module.css
+++ b/src/components/menu/menu.module.css
@@ -24,6 +24,9 @@
 
   /* firefox adds padding */
   padding: 0;
+
+  /* firefox messes the font */
+  font-family: verdana, arial, helvetica, sans-serif;
 }
 
 .menu option {
